--- a/core/pom.xml
+++ b/core/pom.xml
@@ -6,7 +6,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>infraestructura</artifactId>
+    <artifactId>core</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
@@ -16,6 +16,7 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
+    
     <build>
         <plugins>
             <plugin>
