--- a/presentacion/src/main/resources/application.properties
+++ b/presentacion/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=api
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://172.18.0.1:5432/monedas
-spring.datasource.url=jdbc:postgresql://localhost:5432/monedas
+spring.datasource.url=jdbc:postgresql://172.18.0.2:5432/monedas
+#spring.datasource.url=jdbc:postgresql://localhost:5432/monedas
 spring.datasource.username=postgres
 spring.datasource.password=sa
 
